# Customer-Support-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_server.py  pyproject.toml  requirements.txt
.embedding_cache/: 17d45b65ab936829.json  185459aedb25c650.json  19799ea5bd6b4787.json  24bda3505c73809f.json  368a04fdb1d9c097.json  55d4e2a3019fe4cd.json  7ad018eb5da88025.json  7c406fb0d4fa1468.json  7e086de2605f7fb7.json  86ac4b458eb5300f.json  8f06efc288d06fac.json  9cb23347d7329ada.json  9d12f7b2c097c902.json  9f86d081884c7d65.json  a0201de1065780d7.json  a03162ecde0df4bd.json  a320923a965c3e9e.json  a33ccce62816b23f.json  abc69cff7d15a772.json  aff4cb5dea384cad.json  b5e96206461a8212.json  bd8adaa61654287a.json  c137dd2b4ecfc7a0.json  c5adbb968cf91792.json  dfffc3d17c758e46.json  f30e7f3773cc8ddc.json  f34f3bc8bff9b941.json
data/processed/: .gitkeep
data/raw/: .gitkeep
data/raw/lankatel/: about_me.jsonl  account_management.jsonl  billing_payments.jsonl  chat_actions.jsonl  company_history.jsonl  company_information.jsonl  customer_scenarios.jsonl  customer_support.jsonl  data_packages.jsonl  data_usage_fup.jsonl  faq_troubleshooting.jsonl  installation_connections.jsonl  lankatel_knowledge_base.jsonl  locations.jsonl  support_hours.jsonl  support_roles.jsonl  value_added_services.jsonl  voice_sms_packages.jsonl
data/samples/: sample_faq.jsonl
db/: mysql_schema.sql  sample.sql
docker/: nginx.conf  start.sh
scripts/: build_processed_kb.py  check_quota.py
src/: __init__.py  cli.py  config.py  db.py  ingestion.py  logger.py  messages.py
src/core/: __init__.py  embeddings.py  llm.py  speech.py  vectorstore.py
src/pipeline/: __init__.py  chunker.py  rag_pipeline.py  retriever.py
src/realtime/: __init__.py  conversation_controller.py  events.py  intent_manager.py  llm_stream.py  memory.py  rag_engine.py  stt_stream.py  tts_stream.py  voice_agent.py
src/services/: actions.py  auth.py  email_client.py
tests/: __init__.py  conftest.py  test_chunker.py  test_config.py  test_realtime.py  test_vectorstore.py
ui/: .gitignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/public/: manifest.json
ui/src/: env.d.ts
ui/src/app/: RootLayoutClient.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
ui/src/app/admin/: page.tsx
ui/src/app/console/: page.tsx
ui/src/app/voice/: page.tsx
ui/src/components/: ErrorBoundary.tsx  index.ts
ui/src/components/chat/: AgenticPanel.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ChatMessagesList.tsx  index.ts
ui/src/components/landing/: HeroSection.tsx  index.ts
ui/src/components/layout/: FloatingSidebar.tsx  Logo.tsx  Navigation.tsx  index.ts
ui/src/components/providers/: ThemeProvider.tsx  index.ts
ui/src/components/session/: SessionListItem.tsx  SessionSidebar.tsx  index.ts
ui/src/components/ui/: AnimatedOrb.tsx  (+13 more)
ui/src/hooks/: index.ts  useAuthSession.ts  useBackendHealth.ts  useChat.ts  useSessions.ts  useVoice.ts
ui/src/lib/: api-client.ts  config.ts  errors.ts  storage.ts  ui-messages.ts
ui/src/types/: api.ts  components.ts  index.ts
(+20 files in other folders)
